--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
+[submodule "bundle/fuzzy_finder"]
+	path = bundle/fuzzy_finder
+	url = https://github.com/vim-scripts/FuzzyFinder
